# ballistics

./: .eslintrc.cjs  .eslintrc.json  .swcrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.prod.json  vite.config.ts  webpack.config.ts
.github/workflows/: deploy.yml
ballistics-calc/: Cargo.toml
ballistics-calc/src/: lib.rs
src/: App.tsx  Inputs.tsx  Table.tsx  TrajectoryCalculator.tsx  TrajectoryCalculatorInputs.tsx  TrajectoryCalculatorOutputs.tsx  UnitOfMeasure.ts  index.html  index.tsx
src/TrajectoryCalculatorInputs/: GridTextFieldWithUnits.tsx  TrajectoryCalculatorInputs.tsx
src/__tests__/: UnitOfMeasure.tests.ts
