[package]
name = "ballistics-calc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ballistics-rs = { git = "https://github.com/JRF63/ballistics-rs.git" }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"
lto = true
